CI images update

--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-01 06:31:38
+lastsearch = 2024-08-01 10:04:52
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -320,4 +320,9 @@ url = https://industria-alimentare.it/811679-môn-về-hậu-caác-bệnh.html
 match = 21.4%%
 title = Ung thư - Trời kêu ai nấy dạ
 url = https://fbtag.net/d/659670-ung-thu-troi-keu-ai-nay-da
+
+[eva.vn]
+match = -42.9%%
+title = Xám khói: Màu tóc đẹp ấn tượng phù hợp với mọi loại da
+url = https://eva.vn/bi-quyet-lam-dep/xam-khoi-mau-toc-dep-an-tuong-phu-hop-voi-moi-loai-da-c280a520007.html
 
