--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-01 01:27:41
+lastsearch = 2024-08-01 10:00:48
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu7TTeCWm&sig=ACfU3U3zbYiV5fDenr_vxJ7aOuuM8CaGIQ&hl=en&sa=X&ved=2ahUKEwiLzLr68M6HAxW0LUQIHfN8FpQQ6AF6BAgbEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9FgF6vx6&sig=ACfU3U31WBu2bOTypimoB-0BGt5VIg-bjA&hl=en&sa=X&ved=2ahUKEwjMxcLX5tKHAxUeF1kFHTzxG1kQ6AF6BAgoEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
