--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-01 05:38:27
+lastsearch = 2024-08-01 10:01:28
 
 [shopee.vn]
 match = -76.2%%
@@ -99,7 +99,7 @@ url = https://suongtuyet.com/tham-trai-giuong-fila
 [noithatcaco.vn]
 match = -123.8%%
 title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em?srsltid=AfmBOoo_W6Wok0Axl3gSzgmyxfbX39pGWwEaZQtcQGbOeQqxczGvUjkM
 
 [unmei.com.vn]
 match = -100.0%%
