--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-31 23:40:43
+lastsearch = 2024-08-01 10:02:11
 
 [demxanh.com]
-match = 27.6%%
-title = Bộ chăn ga gối Hanvico LIVING - LV56
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv56.html?srsltid=AfmBOorJVrUe-pvVGsrUsd7PxH9eMmuu6H2PSwqUTjGdqBMiXSwdvC_9
+match = 28.0%%
+title = Chăn ga gối Singapore lụa
+url = https://demxanh.com/chan-ga-goi-singapore-lua.html?srsltid=AfmBOoo5aF_Kp1-cw9htZolawQ4FMwPD8su2Ct6B_DNCGhOC5aSvc0D9
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeo
 [thegioidemonline.com]
 match = 34.5%%
 title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOootfR01Zow0cCgix5nCvhPdmmk7BeGrC9y0mZO_DF65fnQNiS86
 
 [dem4mua.vn]
 match = 6.9%%
