--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-01 02:36:43
+lastsearch = 2024-08-01 10:06:14
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
-url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
+title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
 match = -32.1%%
@@ -39,7 +39,7 @@ url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cu
 [www.impehcm.org.vn]
 match = -46.4%%
 title = Những câu hỏi thường gặp tại Khoa Khám bệnh chuyên khoa ...
-url = http://www.impehcm.org.vn/noi-dung/tin-hoat-dong/nhung-cau-hoi-thuong-gap-tai-khoa-kham-benh-chuyen-khoa-ky-sinh-trung.html
+url = https://www.impehcm.org.vn/noi-dung/tin-hoat-dong/nhung-cau-hoi-thuong-gap-tai-khoa-kham-benh-chuyen-khoa-ky-sinh-trung.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -310,4 +310,9 @@ url = https://archive.org/stream/DarsENizamiDoraEHadees8thYear/JameAlTirmeziVol2
 match = -67.9%%
 title = Ресницы на ленте Absolute Classic Collection 16 линий ...
 url = https://olash.ru/product/1мини-палетка-ресниц-o-lash-beauty-absolute-classic-6-линий-копи-3/
+
+[quizlet.com]
+match = -3.6%%
+title = Thẻ ghi nhớ: vàng da tăng bilirubin - sgk
+url = https://quizlet.com/vn/820708208/vang-da-tang-bilirubin-sgk-flash-cards/
 
