--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-01 06:57:56
+lastsearch = 2024-08-01 09:52:32
 
 [vnexpress.net]
 match = -128.6%%
@@ -347,9 +347,9 @@ title = Khu du lịch cáp treo - Hồ Mây Vũng Tàu.
 url = http://tpvt.vungtau.baria-vungtau.gov.vn/web/guest/du-lich-vung-tau/-/brvt/extAssetPublisher/content/333393/khu-du-lich-cap-treo-ho-may-vung-tau
 
 [www.klook.com]
-match = -61.9%%
-title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
-url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
+match = -66.7%%
+title = 22 Địa Điểm Du Lịch Vũng Tàu Nổi Tiếng Mạng Xã Hội
+url = https://www.klook.com/vi/blog/dia-diem-du-lich-vung-tau/
 
 [www.traveloka.com]
 match = -114.3%%
