--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-01 05:37:45
+lastsearch = 2024-08-01 10:03:53
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -97,9 +97,9 @@ title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
 url = https://masterisehomes.com/lumiere-boulevard/vn/project
 
 [xuongdochoi.com]
-match = -200.0%%
-title = Thiết bị tập cụm lắc eo, đi bộ trên không, xoay eo bhs40
-url = https://xuongdochoi.com/thiet-bi-tap-cum-lac-eo-di-bo-tren-khong-xoay-eo-bhs40
+match = -86.7%%
+title = Đi bộ lắc tay bhs1 - Đồ chơi Bắc Hà
+url = https://xuongdochoi.com/di-bo-lac-tay-1
 
 [www.tuyensinh.dau.edu.vn]
 match = -266.7%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -260.0%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
