--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-08-01 06:26:42
+lastsearch = 2024-08-01 10:05:11
 
 [www.diepxuan.com]
 match = -19.0%%
 title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html?srsltid=AfmBOorZD1vRlza7r3vdUos7ML55mN300D_AXNXAvWw8LJfRvUdfkHfI
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [tiki.vn]
 match = -81.0%%
