CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-01 05:35:01
+lastsearch = 2024-08-01 10:22:48
 
 [silverwow.net]
 match = -255.6%%
@@ -64,7 +64,7 @@ url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B0
 [unistrutohio.com]
 match = -466.7%%
 title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
-url = https://unistrutohio.com/products/p1001?srsltid=AfmBOoqTwT27GOxBh2BrFZ_8Yj5nhcfFYTHk4XRpt6jx3w2EaQgZrSQA
+url = https://unistrutohio.com/products/p1001
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -357,9 +357,9 @@ title = 88 Chan Kong Thye Chilli Paste 3kg
 url = https://shopee.sg/88-Chan-Kong-Thye-Chilli-Paste-3kg-i.273437342.5954728914
 
 [www.aliexpress.com]
-match = -433.3%%
-title = Jeju Mini Pumpkin Chestnut Pumpkin (Bau-chan) 3kg 5kg ...
-url = https://www.aliexpress.com/item/1005007006636974.html?gps-id=platformRecommendH5ForSpider&pvid=681fc913-d106-42ba-a11f-c7a97a4289ed&_t=gps-id:platformRecommendH5ForSpider,pvid:681fc913-d106-42ba-a11f-c7a97a4289ed,tpp_buckets:668#2846#8111#1996&pdp_npi=4@dis!USD!23.03!23.03!!!32900!32900!@2103237317208540235563527e03b3!-1!rec!CA!!AB
+match = -455.6%%
+title = Jeju Nogi Mini Night Pumpkin (Bau-chan) 3kg 6 ~ 12 pieces
+url = https://www.aliexpress.com/item/1005007181928372.html
 
 [www.speedymetals.com]
 match = 0.0%%
