--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-01 09:30:45
+lastsearch = 2024-08-01 10:25:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -57,9 +57,9 @@ title = Reise Know-How CityTrip Saigon / Ho-Chi-Minh-Stadt
 url = https://books.google.com/books?id=2Ah4DwAAQBAJ&pg=PA148&lpg=PA148&dq=chieu+truc+lieu+chau+16&source=bl&ots=jX_lxRkAum&sig=ACfU3U3_IP53rbTwmi6AdbAIqBbkr4z0OQ&hl=en&sa=X&ved=2ahUKEwiZ2Ib839KHAxWakIkEHbESBE4Q6AF6BAggEAM
 
 [www.facebook.com]
-match = -108.7%%
-title = TOP 16 TẠI LUSHAN OPEN -... - Vietnam Billiards Promotion
-url = https://www.facebook.com/story.php/?story_fbid=432875506417487&id=100090851226390
+match = 40.0%%
+title = Chiếu Trúc Linh
+url = https://www.facebook.com/chuclinhtreviet/?locale=vi_VN
 
 [gpcantho.com]
 match = -56.5%%
