--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-01 04:35:55
+lastsearch = 2024-08-01 10:25:07
 
 [demxanh.com]
 match = 0.0%%
@@ -12,14 +12,14 @@ title = Thảm trải giường cao su non màu ghi
 url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
-match = 75.0%%
-title = Thảm lông xù 150x190
-url = https://demre.com.vn/tham-long-xu-150x190-2
+match = 18.2%%
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -52,9 +52,9 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -90.9%%
-title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
-url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
+match = -59.1%%
+title = Thảm trải chân giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải chân giường
 
 [cafeland.vn]
 match = -45.5%%
