--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-01 06:16:10
+lastsearch = 2024-08-01 10:27:35
 
 [www.diepxuan.com]
-match = -72.7%%
-title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html?srsltid=AfmBOooV56DOrcpgb-aA4yOD1AuPojhvpZ16ov1clydQgsJ1bWCTp-pu
+match = 4.5%%
+title = Bộ ga chun coco 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = 13.6%%
-title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
-url = https://shopee.vn/product/494447407/24864025138
+match = -59.1%%
+title = Bộ ga gối nỉ nhung COCO nhập khẩu cao cấp, ga trải ...
+url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-COCO-nhập-khẩu-cao-cấp-ga-trải-giường-3-món-ga-chun-bọc-đệm-bền-màu-không-bai-dão-KT-1m6-1m8-2m2-i.224201185.14136884439
 
 [m.facebook.com]
-match = -18.2%%
-title = COCO Decor - Chăn Ga Gối | Nam Định
-url = https://m.facebook.com/cocodecorchangagoidem/
+match = -100.0%%
+title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
+url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = -50.0%%
 title = Bộ Ga Giường Cao Cấp Loại Ga Chun Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/?srsltid=AfmBOoqOqcYj4Ut-HXlEQs3j_872DneLk8qS0gcXziJZbQvbjkcv9vA9
+url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/
 
 [www.instagram.com]
 match = 4.5%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -50.0%%
-title = Chiếu cao su non Coco bo chun màu xanh dương
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html?srsltid=AfmBOooy-pjzaIvW3uEuRlMGiOy8EKE_IMWZ1QcGuLr0HF8DBzyLpk7b
+match = -27.3%%
+title = Chiếu cao su non Coco bo chun màu hồng
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html
 
 [www.tiktok.com]
 match = -127.3%%
@@ -90,4 +90,9 @@ url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 match = -72.7%%
 title = Báo cáo thị trường Bộ ga gối đệm dành cho doanh nghiệp
 url = https://metric.vn/bo-ga-goi-dem?utm_content=report-preview&download=1
+
+[ngungon.com]
+match = 33.3%%
+title = Bộ Ga Chun Chần
+url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan/
 
