--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-01 06:23:35
+lastsearch = 2024-08-01 10:16:12
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoqC1YY0UYV4tcdRU6CNVU6H2Sw9KSvxxbSSjUPhUHcZ22ssdyFm
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOopnmEzBGgcSPh9ivetr5CL4u90XIqiGGyxXFkWxj-XZfaSYSU2G
 
 [shopee.vn]
 match = -69.6%%
@@ -28,8 +28,8 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOopeAfDrJya6vvSVeZXmK25OBBv9ky6-nRt_HNAi5LLQTAAHLvGK
 
 [chieutrucsaigon.com]
 match = -17.4%%
