--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-01 02:44:26
+lastsearch = 2024-08-01 10:19:20
 
 [eva.vn]
 match = -163.2%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = -100.0%%
+title = Linh sam siêu bông Sông Hinh, tím hồng, lá nhỏ M1
+url = https://mocnhienfarm.com/products/linh-sam-sieu-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -72,9 +72,9 @@ title = Cây bòng bong chữa bệnh gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/cay-bong-bong-chua-benh-gi/
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -142.1%%
+title = Kỹ thuật trồng mộc hương - loài cây siêu "đắt đỏ " | VTC16
+url = https://www.youtube.com/watch?v=q48GH4XH8uY
 
 [trungquang.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -89.5%%
-title = 17 cây bóng mát khuyến khích trồng đường phố
-url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
+match = -68.4%%
+title = Mẹo để cây mai chiếu thủy nở rộ vào dịp Tết
+url = https://saigonhoa.com/meo-de-cay-mai-chieu-thuy-no-ro-vao-dip-tet/
 
 [nongthonviet.com.vn]
 match = -94.7%%
