--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-01 09:21:00
+lastsearch = 2024-08-01 10:24:48
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoppIrsQtxGqXQ0PMlRWmomuhOPlwCETTDNx-O6-P9w9ammM2zUb
 
 [shopee.vn]
 match = -6.7%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOooVzwflI23BSJm0YEwDRz7-dnszK11pjrWZOqEE0dvQmeISf5qk
 
 [tiki.vn]
 match = 40.0%%
@@ -100,4 +100,9 @@ url = https://goni.vn/co-nen-su-dung-chieu-dieu-hoa-cho-be-khong/
 match = -10.0%%
 title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
 url = https://betiti.com/san-pham/chieu-dieu-hoa/
+
+[www.nemuytin.com]
+match = -6.7%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 
