--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-01 02:44:47
+lastsearch = 2024-08-01 10:16:55
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -123.5%%
-title = Thufingte 1-31 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
+match = -111.8%%
+title = Exodus 1-40 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -129.4%%
-title = Matthew 20:22 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
+match = -182.4%%
+title = Luke 20-22 NIV - The Authority of Jesus Questioned - One
+url = https://www.biblegateway.com/passage/?search=Luke 20-22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
