CI images update

--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-01 09:55:39
+lastsearch = 2024-08-01 10:36:01
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -37.0%%
-title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoo4XX4D4w-IQp3IZtFzgw2JV0mM1nksY7uJDDFYZ9phGOXmfye9
 
 [elambo.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+match = -74.1%%
+title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html?srsltid=AfmBOoqc4D0zyj03b0j4Gl5Nup_9GnT8Lb0Wv2dm8iC7D4PYnp-hcbYx
 
 [www.thegioididong.com]
 match = -44.4%%
@@ -147,9 +147,9 @@ title = Người góp phần làm khởi sắc bản biên giới Mùa Xuân
 url = https://www.bienphong.com.vn/nguoi-gop-phan-lam-khoi-sac-ban-bien-gioi-mua-xuan-post477378.html
 
 [m.facebook.com]
-match = -81.5%%
-title = Tiền doanh thu e k rút đc, số dư tk shopee vẫn 0₫ và vẫn bị ...
-url = https://m.facebook.com/groups/shopeenguoiban.chiasekinhnghiem/posts/1761510581320069/
+match = -55.6%%
+title = Shopee | E hỏi thật hàng hoàn về các bác có cho người ...
+url = https://m.facebook.com/groups/shopeenguoiban.chiasekinhnghiem/posts/1761595157978278/
 
 [vietbao.com]
 match = 3.7%%
@@ -188,8 +188,8 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
 match = -44.4%%
-title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+title = Mua tivi Sony giá rẻ chính hãng, giao nhanh, trả góp 0%%
+url = https://dienmaycholon.com/tivi-sony?srsltid=AfmBOooa3g2b1Dul-9mV413keUp7kkdzNLsznE0N31ZsfMFKrQY8zFp6
 
 [metruyen.me]
 match = 33.3%%
@@ -285,4 +285,9 @@ url = https://www.catherinedenoual.com/vi/collections/chan-ga-goi/vo-goi/cap-vo-
 match = -22.2%%
 title = Bộ chăn ga vỏ gối cotton dệt kim kẻ caro MM2329
 url = https://flexhouse.vn/bo-chan-ga-vo-goi-cotton-det-kim-ke-caro-mm2329
+
+[giaophanlongxuyen.org]
+match = -70.4%%
+title = Thứ Sáu 02/08/2024 – Thứ Sáu đầu tháng, tuần 17 thường ...
+url = https://giaophanlongxuyen.org/tin-tuc/thu-sau-02082024-thu-sau-dau-thang-tuan-17-thuong-nien-tin-nhan-hay-khong-tin-nhan.html
 
