--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-01 06:32:18
+lastsearch = 2024-08-01 10:30:52
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -12,14 +12,14 @@ title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+match = 32.3%%
+title = Chăn ga gối Singapore đệm tròn CIRCLE18
+url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle18.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 202
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-202
+title = Bộ chăn ga gối SH_UT23 032
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -112,9 +112,9 @@ title = COZINO|Bộ chăn ga gối Lụa satin cao cấp CZN 18-Họa tiết ...
 url = https://cozino.vn/do-dung-gia-dinh/bo-chan-ga-goi-lua-satin-cao-cap-czn-18-hoa-tiet-theu-hoa-day/
 
 [songhong.info]
-match = -9.7%%
-title = Chăn ga gối Walt Disney chính hãng Sông Hồng sản xuất
-url = https://songhong.info/chan-ga-goi-walt-disney
+match = -6.5%%
+title = Mẫu sản phẩm chăn ga gối Sông Hồng WaltDisney YC20003
+url = https://songhong.info/chan-ga-goi-yc20003
 
 [dodungnoithat.vn]
 match = -6.5%%
