--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-01 09:50:49
+lastsearch = 2024-08-01 10:31:35
 
 [www.facebook.com]
 match = -141.2%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha
+url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOorYGDx2aDgzPRU9dupqGrbBkSTbxJx2nhMkIUFJl6ceA4UlzYiB
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOoo2U0sAxOfo4P0vPqYHlnF-yWrzUuIHLU4a03fcZ65bV9QKjQIv
 
 [m.facebook.com]
 match = -194.1%%
