--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-01 05:49:24
+lastsearch = 2024-08-01 10:34:37
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOorLyq52cMmq0w7aqP8To7aW7GxJAMlTi4fVgPi_S6WAYfvVXkx8
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOor7OS_oazyRbZs4lkoxXzZ0-sgt6XJHgeL6gr9H1vfRHvLjUMkx
 
 [tiki.vn]
 match = -3.7%%
@@ -154,7 +154,7 @@ url = https://dantri.com.vn/du-lich/khach-tay-thang-than-noi-ly-do-tai-sao-me-vi
 [www.facebook.com]
 match = -37.0%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
 
 [stockbiz.vn]
 match = 18.5%%
