--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-01 10:06:14
+lastsearch = 2024-08-01 10:32:39
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -17,9 +17,9 @@ title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
 url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
-match = -32.1%%
-title = Madina Beauty & Academy - Cấy Tảo/ Hồng Sâm/ Ủ Trắng
-url = https://www.hotdeal.vn/ho-chi-minh/cham-soc-da-mat/madina-beauty-academy-cay-tao-hong-sam-u-trang-lan-kim-363884.html
+match = -25.0%%
+title = ĐIỀU TRỊ MỤN LƯNG/ THÂM NÁCH/ MÔNG/ BẸN/ LĂN ...
+url = https://www.hotdeal.vn/ho-chi-minh/dieu-tri-mun-tham-nam/dieu-tri-mun-lung-tham-nach-mong-ben-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-phi-kim-tao-bien-cam-ket-hieu-qua-100-mimosa-spa-359573.html?srsltid=AfmBOoquM93csYS92HZ30dgiUgIN--TcA_UhrPCicfN9Z_5FJ24gsRdi
 
 [www.youtube.com]
 match = -60.7%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = 17.9%%
-title = Việc làm spa uy tín - Facebook
-url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
+match = -7.1%%
+title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
+url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -46.4%%
-title = Những câu hỏi thường gặp tại Khoa Khám bệnh chuyên khoa ...
-url = https://www.impehcm.org.vn/noi-dung/tin-hoat-dong/nhung-cau-hoi-thuong-gap-tai-khoa-kham-benh-chuyen-khoa-ky-sinh-trung.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -142,9 +142,9 @@ title = HƢỚNG DẪN SỬ DỤNG KHÁNG SINH
 url = http://cucytegiaothong.mt.gov.vn/Uploads/File/Huong dan su dung khang sinh.pdf
 
 [www.tiktok.com]
-match = 3.6%%
-title = Ủ Trắng Da Mặt Histolab Vũ Thái Bình
-url = https://www.tiktok.com/discover/ủ-trắng-da-mặt-histolab-vũ-thái-bình
+match = -5.6%%
+title = Nhien Thich Di Tam
+url = https://www.tiktok.com/discover/nhien-thich-di-tam
 
 [www.tuelinh.vn]
 match = -200.0%%
