--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-01 09:18:37
+lastsearch = 2024-08-01 10:47:43
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOooY0CbwFm-icUQW0A8YN8a8Qu1rfXHukk0owKNEaR8uvJlsz7_A
 
 [shopee.vn]
 match = -106.7%%
