--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-01 08:01:45
+lastsearch = 2024-08-01 10:33:36
 
 [demxanh.com]
-match = -10.0%%
-title = Tư vấn mua chiếu điều hòa chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-dieu-hoa-chinh-hang-gia-re-tai-dem-xanh.html
+match = 43.5%%
+title = Chiếu điều hòa Nhật Bản
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
 
 [suongtuyet.com]
 match = -13.3%%
