--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-01 10:00:48
+lastsearch = 2024-08-01 10:31:57
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9FgF6vx6&sig=ACfU3U31WBu2bOTypimoB-0BGt5VIg-bjA&hl=en&sa=X&ved=2ahUKEwjMxcLX5tKHAxUeF1kFHTzxG1kQ6AF6BAgoEAM
+match = -81.2%%
+title = Tam tu kinh: - Google Books Result
+url = https://books.google.com/books?id=6LwwAQAAMAAJ&pg=PP378&lpg=PP378&dq=chieu+lac+soc+16&source=bl&ots=hpvzJuu3I2&sig=ACfU3U3rRxhptHYriyV_8UAyvwCA70pVuQ&hl=en&sa=X&ved=2ahUKEwiCndHS7dKHAxW5PDQIHUmeEt4Q6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
