--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-01 01:42:07
+lastsearch = 2024-08-01 10:40:31
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 32.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = 29.0%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [shopee.vn]
-match = 48.4%%
-title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
+match = -12.9%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [tiki.vn]
 match = -19.4%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 54.8%%
-title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
+match = 3.2%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
 
 [www.lazada.vn]
 match = 16.1%%
