--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-08-01 06:35:01
+lastsearch = 2024-08-01 10:33:17
 
 [nemgiakho.com]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = [Bảng Giá]Nệm cao su Liên Á Classic New 160x200x10cm
 url = https://nemgiakho.com/nem-cao-su-lien-a-classic-new-160x200x10cm.html
 
 [www.liena.com.vn]
-match = -25.9%%
-title = nệm cao su - thiên nhiên là gì? top những sản phẩm
-url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi
+match = -22.2%%
+title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
 
 [fefurniture.com.vn]
 match = 7.4%%
@@ -37,9 +37,9 @@ title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
 url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
 
 [tiki.vn]
-match = -11.1%%
-title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Ladome Blue
-url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383513
+match = 0.0%%
+title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Classic
+url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383508
 
 [demcaosuliena.com]
 match = 52.0%%
