--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-01 06:42:30
+lastsearch = 2024-08-01 10:38:48
 
 [www.everonvn.vn]
-match = 69.2%%
-title = Đệm lò xo Everon Pocket Premium
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
+match = 80.8%%
+title = Đệm lò xo Everon Pocket Pops
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = -53.8%%
-title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
-url = https://nemhana.com/nem-everon/
+match = 69.2%%
+title = Nệm lò xo túi Everon Pocket Pops
+url = https://nemhana.com/nem-lo-xo-tui-everon-pocket-pops/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
