--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-01 02:18:01
+lastsearch = 2024-08-01 10:34:58
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,14 +17,14 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+match = -36.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -68.2%%
-title = Thảm trải sàn phòng khách cotton linen Nhật AJC002
-url = https://flexhouse.vn/tham-trai-san-phong-khach-cotton-linen-nhat-ajc002
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
 match = -45.5%%
