--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-01 06:50:41
+lastsearch = 2024-08-01 10:49:25
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoo2lanMxaJ-UAvfnSUeDtG0PWwiT5BPlwwZ4qLXzEeJnmDWQZpL
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = -44.4%%
+title = Bộ Everon EPM22063
+url = https://everon.online/products/bo-everon-epm-22063
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,13 +23,13 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon EPM-24061 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24061.html
 
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOoo4GTh5c7plT2I-x8FwkKs_QtV7EyrWdjUAmdAUYJIAfIimn0QC
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 27.0%%
-title = BỘ CHĂN GA GỐI MIỀN SA MẠC - EST24033
-url = https://www.everonvni.vn/bo-chan-ga-goi-mien-sa-mac-est24033/
+match = 16.7%%
+title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/?srsltid=AfmBOorkOr-2anmFZHUzERJvtXSfL7qSCVIt77Sx2coxY8Fvh1ZV79f8
 
 [everonhanquoc.vn]
 match = 19.4%%
