--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-01 10:24:48
+lastsearch = 2024-08-01 10:49:46
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoppIrsQtxGqXQ0PMlRWmomuhOPlwCETTDNx-O6-P9w9ammM2zUb
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = -6.7%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOooVzwflI23BSJm0YEwDRz7-dnszK11pjrWZOqEE0dvQmeISf5qk
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [tiki.vn]
 match = 40.0%%
