--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-01 10:01:49
+lastsearch = 2024-08-01 10:44:49
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -77,8 +77,8 @@ title = GOES Imagery Viewer - NOAA / NESDIS / STAR
 url = https://www.star.nesdis.noaa.gov/goes/index.php
 
 [www.niaaa.nih.gov]
-match = -38.5%%
-title = Drinking Levels Defined
+match = -130.8%%
+title = Drinking Levels and Patterns Defined
 url = https://www.niaaa.nih.gov/alcohol-health/overview-alcohol-consumption/moderate-binge-drinking
 
 [www.fabtechexpo.com]
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -253.8%%
-title = 0460-215-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
-url = https://www.deutschconnectorstore.com/p-76-deutsch-0460-215-16141-contact-16-14-ga.html
+match = -200.0%%
+title = Deutsch 0460-202-16141 Size 16 Contact 16-20 Ga
+url = https://www.deutschconnectorstore.com/p-70-deutsch-0460-202-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
