--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-01 06:28:32
+lastsearch = 2024-08-01 10:46:34
 
 [m.youtube.com]
 match = -144.4%%
@@ -19,12 +19,12 @@ url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 [www.instagram.com]
 match = -138.9%%
 title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
-url = https://www.instagram.com/p/Bb9uTnaBRoV/?hl=en
+url = https://www.instagram.com/p/Bb9uTnaBRoV/
 
 [www.facebook.com]
-match = -105.6%%
-title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
-url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
+match = 22.2%%
+title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
+url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
 match = -177.8%%
