CI images update

--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-01 04:20:46
+lastsearch = 2024-08-01 11:27:49
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOorD1_bu45r3x1uPOkc_bW86pUKRWFPMuG-YN4nYKD82VnGfnNA3
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
-match = -35.0%%
-title = chiếu nhựa giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu nhựa
+match = -85.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
 
 [tchome.vn]
 match = 20.0%%
@@ -37,9 +37,9 @@ title = chiếu nhựa chiếu cói chiếu tre chiếu trúc ở tại hà nộ
 url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa-chiếu-cói-chiếu-tre-chiếu-trúc-ở-tại-hà-nội.html
 
 [www.sendo.vn]
-match = -75.0%%
-title = Chiếu Nhựa 1M2 Hàng Xịn, Rẻ Nhất, Thanh Toán Khi Nhận
-url = https://www.sendo.vn/chieu-nhua-1m2.htm
+match = -35.0%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
 match = -5.0%%
