--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-01 10:39:52
+lastsearch = 2024-08-01 11:27:10
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -102,9 +102,9 @@ title = Màn Chụp Tự Bung. Cơ Sở Sản Xuất Màn Chụp Lớn Nhất ..
 url = http://manchupcuongan.com/man-chup-tu-bung-co-so-san-xuat-man-chup-lon-nhat-ca-nuoc.html
 
 [www.tiktok.com]
-match = -192.9%%
-title = I WAS EXPERIENCING EVERY SINGLE EMOTION KNOW ...
-url = https://www.tiktok.com/@kellogsfrostiebar69/video/7281409242073107745
+match = -221.4%%
+title = Oopsiedaisy🌈⭕️ (@spacemomsdaughter)’s videos with ...
+url = https://www.tiktok.com/@spacemomsdaughter/video/7397811126106361118
 
 [www.sendo.vn]
 match = -207.1%%
@@ -170,4 +170,14 @@ url = https://thuedochoi.com/man-chup-tu-bung-1m8-x-2m-p2233.html
 match = -135.7%%
 title = Nothing Bundt Cakes: Delicious Bundt Cakes
 url = https://www.nothingbundtcakes.com/
+
+[bandcamp.com]
+match = -50.0%%
+title = Bandcamp
+url = https://bandcamp.com/
+
+[brenontheroad.com]
+match = -128.6%%
+title = The Ultimate Guide To New Zealand Slang
+url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
 
