--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-31 23:48:41
+lastsearch = 2024-08-01 11:28:09
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -22,8 +22,8 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2021-2022-app-data-by-school-q6.xls
 
 [medboard.nv.gov]
-match = -90.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -125.0%%
+title = Disciplinary Actions - NV Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.uclahealth.org]
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -15.0%%
-title = Abraham Palmer - UCSD Profiles
-url = https://profiles.ucsd.edu/abraham.palmer
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -53,13 +53,13 @@ url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
 match = 0.0%%
-title = Joel Palefsky, MD
-url = https://profiles.ucsf.edu/joel.palefsky
+title = Jennifer Puck, MD
+url = https://profiles.ucsf.edu/jennifer.puck
 
 [www.ncbi.nlm.nih.gov]
-match = -150.0%%
-title = Consensus Guidelines on the Use of Intravenous Ketamine ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6023575/
+match = -130.0%%
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = 0.0%%
@@ -127,9 +127,9 @@ title = Bladder Cancer: Practice Essentials, Background, Anatomy
 url = https://emedicine.medscape.com/article/438262-overview
 
 [profiles.sc-ctsi.org]
-match = 0.0%%
-title = Mark Krailo - USC Profiles
-url = https://profiles.sc-ctsi.org/mark.krailo
+match = -80.0%%
+title = Paul Thompson - USC Health Sciences Profiles
+url = https://profiles.sc-ctsi.org/paul.thompson
 
 [asapdata.arc.nasa.gov]
 match = -95.0%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = -38.5%%
-title = R Lor Randall
-url = https://profiles.ucdavis.edu/r.randall
+match = 0.0%%
+title = Merrill E Gershwin
+url = https://profiles.ucdavis.edu/merrill.gershwin
 
 [store.samhsa.gov]
 match = -60.0%%
