--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-01 09:30:24
+lastsearch = 2024-08-01 11:28:52
 
 [changagoidemsonghong.com]
 match = 7.4%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOopABxCk2Q8KKq3y8F0XYDGI8FT2kcc9VaHtKqzjpmttxdPHKkke
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/search?keyword=chăn ga cotton
 [lynconcept.com]
 match = -25.9%%
 title = Bộ Chăn Ga Gối Cotton 100%% Hàn Quốc In Hình Hoa Nhỏ ...
-url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16?srsltid=AfmBOorXzHsOBSU_e9zckr6yqR4l1qjPvXOmbcc5aQiRbRREVYWofDBa
+url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16
 
 [changagoidemsonghong.online]
 match = -7.4%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -25.9%%
-title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
