--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-01 01:38:01
+lastsearch = 2024-08-01 11:18:51
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -12,8 +12,8 @@ title = Chan cocoo - Freelance (Self employed)
 url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -230.8%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+match = -23.1%%
+title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
