--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-01 10:32:39
+lastsearch = 2024-08-01 11:29:13
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
+title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
+url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -7.1%%
-title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
-url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
+match = 17.9%%
+title = Việc làm spa uy tín - Facebook
+url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -53.6%%
+title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -315,4 +315,9 @@ url = https://olash.ru/product/1мини-палетка-ресниц-o-lash-beau
 match = -3.6%%
 title = Thẻ ghi nhớ: vàng da tăng bilirubin - sgk
 url = https://quizlet.com/vn/820708208/vang-da-tang-bilirubin-sgk-flash-cards/
+
+[baoquangninh.vn]
+match = 10.7%%
+title = Cái tên nào thống trị rạp Việt tháng 8?
+url = https://baoquangninh.vn/cai-ten-nao-thong-tri-rap-viet-thang-8-3311600.html
 
