--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-31 23:21:43
+lastsearch = 2024-08-01 11:15:22
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -17,13 +17,13 @@ title = Thắng Lợi
 url = http://nemxinh.net/thuong-hieu/thang-loi
 
 [shopee.vn]
-match = -84.0%%
-title = chăn ga thắng lợi giá tốt Tháng 7, 2024 Chăn, Ga, Gối & ...
-url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
+match = 8.0%%
+title = Bộ Chăn Ga Gối 5 Món BRANIO 180 x 200 cm
+url = https://shopee.vn/search?keyword=Bộ Chăn Ga Gối 5 Món BRANIO 180 x 200 cm
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
