--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-01 06:57:34
+lastsearch = 2024-08-01 11:31:14
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -82.4%%
-title = I need advice #lawyer #hoa #taylorswift
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -76.5%%
+title = Im done with it #neighbors #hoa #creatine
+url = https://www.tiktok.com/@koltindarley/video/7309119538296065323
 
 [www.21alivenews.com]
 match = -123.5%%
