--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-01 10:43:35
+lastsearch = 2024-08-01 11:21:38
 
 [www.lazada.vn]
 match = -212.5%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -237.5%%
+title = #1 long lasting lip liner from @Huda Beauty in Terracotta I ...
+url = https://www.tiktok.com/@bilintinamakeup/video/7368236160637783338
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
