--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-01 06:29:35
+lastsearch = 2024-08-01 11:42:24
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạn
 [demxanh.com]
 match = -25.0%%
 title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html
+url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOopVNEOiRxNLCE52IZhFKj5P6TnVNe8alllvXb7Shl0jwQwk5Ln3
 
 [changagoibenlinda.com]
 match = -12.5%%
