--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-01 10:49:25
+lastsearch = 2024-08-01 11:44:48
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoo2lanMxaJ-UAvfnSUeDtG0PWwiT5BPlwwZ4qLXzEeJnmDWQZpL
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
 match = -44.4%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24061.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOoo4GTh5c7plT2I-x8FwkKs_QtV7EyrWdjUAmdAUYJIAfIimn0QC
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -39,7 +39,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 [www.everonvni.vn]
 match = 16.7%%
 title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/?srsltid=AfmBOorkOr-2anmFZHUzERJvtXSfL7qSCVIt77Sx2coxY8Fvh1ZV79f8
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
 
 [everonhanquoc.vn]
 match = 19.4%%
