--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-01 06:43:52
+lastsearch = 2024-08-01 11:47:50
 
 [www.instagram.com]
-match = -173.3%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+match = -6.7%%
+title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [thewoksoflife.com]
