--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-01 06:34:42
+lastsearch = 2024-08-01 11:46:31
 
 [helloviettravel.com]
 match = -181.2%%
@@ -19,7 +19,7 @@ url = http://saovangtravel.com/du-lich-x/du-lich-xuyen-viet-19-ngay-18-dem/
 [hanhhuonghoasen.com.vn]
 match = -50.0%%
 title = DU LỊCH XUYÊN VIỆT 18N17D GIÁ RẺ
-url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet
+url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet?srsltid=AfmBOorVq0uTj1hloQKFtKIAg8YjpeW2Qf5puUliT8FqeULS0IdiQWYE
 
 [vtv.vn]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -193.8%%
-title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
-url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
+url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
 match = -150.0%%
