--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = -4.0%%
-title = Bộ ga chun Cotton chống thấm màu xanh đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
+match = 4.0%%
+title = Bộ ga chun Cotton chống thấm màu trắng
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
 
 [www.lazada.vn]
 match = 0.0%%
