--- a/images/nem-dreamland-uc-160x200x09/config.ini
+++ b/images/nem-dreamland-uc-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x200x09.html
 lastopen = 2024-06-07 01:35:10
 
 [search]
-lastsearch = 2024-08-01 09:50:31
+lastsearch = 2024-08-01 11:47:31
 
 [www.diepxuan.com]
 match = 51.9%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOooguQscGXGqbOlKJODh6qGoZmMNbMNG4Pzhys6hKxxVnlbNHwyL
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [forums.brianenos.com]
 match = -66.7%%
