--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-01 09:26:56
+lastsearch = 2024-08-01 11:40:00
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -272.7%%
-title = San Francisco 10k Runs and Races Calendar 2024/25
-url = https://www.runguides.com/san-francisco/runs/10k/all
+match = -145.5%%
+title = 2024 Mt. Tam Trail Run | Mill Valley
+url = https://www.runguides.com/event/4688/mt-tam-trail-run
 
 [www.kategridley.com]
 match = -125.0%%
