--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-01 06:21:51
+lastsearch = 2024-08-01 11:35:33
 
 [shopee.vn]
-match = -30.8%%
-title = ga tham em be
-url = https://shopee.vn/search?keyword=ga-chong-tham-ga-trai-giuong-tham-chong-tham-cho-em-be-16x2m-tang-khau-trang-mau-ngau-nhien/6709027127215517721/2642071820174507179/ 
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
 match = -100.0%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOooImLwzsXfkUTvLxwufauguvkrPeM3w5PYU-gFcsobPV4sgMCwK
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
 
 [giuongxep.com]
 match = -57.1%%
@@ -129,7 +129,7 @@ url = https://danacity.com/chon-tham-trai-san-giuong-ngu-theo-phong-thuy-cho-tun
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoqI52r80Qs3xZupY9w5KRkGbU45rwN8gM0isBBFlpU4YvWTJg4j
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [danacity.com.vn]
 match = -42.9%%
