--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-01 09:34:28
+lastsearch = 2024-08-01 11:35:55
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = 0.0%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -308.3%%
-title = Road of the Kasbahs 4x4 Tour with Lunch in Aït Benhaddou
-url = https://www.tuimusement.com/us/morocco/marrakech/road-of-the-kasbahs-4x4-tour-with-lunch-in-ait-benhaddou-6/e_j30ek-d_160-c_118/
+match = -366.7%%
+title = Book Tickets for Experiences and Activities Worldwide | TUI ...
+url = https://www.tuimusement.com/us/
 
 [www.dixondirectional.com]
 match = -166.7%%
