--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-01 10:36:01
+lastsearch = 2024-08-01 11:41:23
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoo4XX4D4w-IQp3IZtFzgw2JV0mM1nksY7uJDDFYZ9phGOXmfye9
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -42,14 +42,14 @@ title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/
 
 [demxanh.com]
-match = -74.1%%
-title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html?srsltid=AfmBOoqc4D0zyj03b0j4Gl5Nup_9GnT8Lb0Wv2dm8iC7D4PYnp-hcbYx
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -44.4%%
-title = Cách chặn tất cả cuộc gọi đến Viettel, MobiFone ...
-url = https://www.thegioididong.com/hoi-dap/cach-chan-cuoc-goi-den-mang-viettel-mobifone-vinaphone-1363346
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -72,9 +72,9 @@ title = Vợ U65 nhưng vẫn liên tục đòi hỏi 'chuyện chăn gối'
 url = https://tintuconline.com.vn/yeu/vo-u65-nhung-van-lien-tuc-doi-hoi-chuyen-chan-goi-n-604589.html
 
 [vnexpress.net]
-match = 0.0%%
-title = Tôi thường bị vợ 'cấm vận' mỗi khi giận
-url = https://vnexpress.net/toi-thuong-bi-vo-cam-van-moi-khi-gian-2416485.html
+match = -3.7%%
+title = Vợ chồng tôi quá chán nhau mà không ai muốn bỏ
+url = https://vnexpress.net/vo-chong-toi-qua-chan-nhau-ma-khong-ai-muon-bo-4306257.html
 
 [th-ttsia2.quangdien.thuathienhue.edu.vn]
 match = 9.1%%
@@ -188,8 +188,8 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
 match = -44.4%%
-title = Mua tivi Sony giá rẻ chính hãng, giao nhanh, trả góp 0%%
-url = https://dienmaycholon.com/tivi-sony?srsltid=AfmBOooa3g2b1Dul-9mV413keUp7kkdzNLsznE0N31ZsfMFKrQY8zFp6
+title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
