CI images update

--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-01 10:25:28
+lastsearch = 2024-08-01 11:59:07
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html
+url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOoq-RLTpVPwURxNDcUTTth1cwwAKwhH9hDelWa5gEQXmH9CQhRrB
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOor7mQF-NklfoiIEdRKMZhXQ7W8kebnbpyhbgp8R4G03o5InkAsh
 
 [shopee.vn]
 match = -21.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/list/chăn ga gối
 [foreverbedding.net]
 match = -32.1%%
 title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOoreM7UTIBBTyrsppAmqTibjdXM4OZSMMzA6cEGnYu9DkM1uZ9Xd
 
 [changagoidemsonghong.com]
 match = 17.9%%
