--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-01 10:47:20
+lastsearch = 2024-08-01 11:55:09
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Tetsu Inada
-url = https://en.wikipedia.org/wiki/Tetsu_Inada
+match = -15.4%%
+title = Takeru Segawa
+url = https://en.wikipedia.org/wiki/Takeru_Segawa
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -32,9 +32,9 @@ title = Epithelial sodium channel (ENaC) family
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4756657/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0u7x1-Ff&sig=ACfU3U2GIe3Lq1UrCGVs-JG5h-xiqXVnww&hl=en&sa=X&ved=2ahUKEwig9oiL8dKHAxV3weYEHXODPfoQ6AF6BAgaEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWHP2n_9&sig=ACfU3U2Kvnjb4Nhx870oX97qih-IIp7t4Q&hl=en&sa=X&ved=2ahUKEwiu9KifgNOHAxXKl-4BHX3yDYoQ6AF6BAgbEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
