--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -17,9 +17,9 @@ title = NEM Fashion - NEM Fashion added a new photo.
 url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -55.6%%
+title = Bảng giá nệm lò xo khuyến mãi mới 2024
+url = https://thegioinem.com/bang-gia-nem-lo-xo-khuyen-mai.html
 
 [garan.vn]
 match = -166.7%%
@@ -102,9 +102,9 @@ title = Login - UEH
 url = https://login.ueh.edu.vn/
 
 [shopee.vn]
-match = -166.7%%
-title = Nem nướng phên bà tuyết - Giá Tốt, Miễn Phí Vận Chuyển, ...
-url = https://shopee.vn/list/nem nướng phên
+match = -122.2%%
+title = Đệm xốp pe siêu nhẹ có độ dày 7 đến 9cm kích thước ...
+url = https://shopee.vn/Đệm-xốp-pe-siêu-nhẹ-có-độ-dày-7-đến-9cm-kích-thước-1m6x2m-và-1m8x2m-i.108512481.23856857798
 
 [nemphuoclong.vn]
 match = -83.3%%
@@ -155,4 +155,29 @@ url = https://vovgiaothong.vn/newsaudio/tha-ca-tien-ong-cong-ong-tao-nguoi-nhe-n
 match = -38.9%%
 title = Món cuốn – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Món_cuốn
+
+[demgiare.net]
+match = 22.2%%
+title = Đệm Xốp Ép Siêu Nhẹ 3 Mảnh
+url = https://demgiare.net/dem-xop-ep-sieu-nhe-3-manh.html
+
+[lombom.com]
+match = -122.2%%
+title = Đệm Sinh Viên nệm xốp ép siêu nhẹ giá rẻ - Lombomshop!
+url = https://lombom.com/dem-sinh-vien/
+
+[nemhana.com]
+match = -105.6%%
+title = Nệm cao su bông ép Kim Cương Titanium - Nệm Hana
+url = https://nemhana.com/nem-cao-su-bong-ep-kim-cuong-titanium/
+
+[demxanh.com]
+match = -122.2%%
+title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html?srsltid=AfmBOoo_hTO1TVUttcujZaCVmiEs3L2TPJS3MKgcQNHBHHKFT_MHWu8b
+
+[didaudodi.com]
+match = -111.1%%
+title = Nệm trekking tự bơm hơi siêu nhẹ Naturehike NH19Q034-D
+url = https://didaudodi.com/nem-ngu/nem-trekking-tu-bom-hoi-sieu-nhe-naturehike-nh19q034?srsltid=AfmBOooznZx6mCTmI__BuBgZYMrGdeuENiTps_Wb-S8Hs64n2HMxUC1O
 
