--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-01 10:27:35
+lastsearch = 2024-08-01 11:49:29
 
 [www.diepxuan.com]
-match = 4.5%%
-title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
-match = -59.1%%
-title = Bộ ga gối nỉ nhung COCO nhập khẩu cao cấp, ga trải ...
-url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-COCO-nhập-khẩu-cao-cấp-ga-trải-giường-3-món-ga-chun-bọc-đệm-bền-màu-không-bai-dão-KT-1m6-1m8-2m2-i.224201185.14136884439
+match = 13.6%%
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
-match = -100.0%%
-title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
-url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
+match = -18.2%%
+title = COCO Decor - Chăn Ga Gối | Nam Định
+url = https://m.facebook.com/cocodecorchangagoidem/
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -27.3%%
-title = Chiếu cao su non Coco bo chun màu hồng
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html
+match = -50.0%%
+title = Chiếu cao su non Coco bo chun màu xanh dương
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html
 
 [www.tiktok.com]
 match = -127.3%%
