--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-01 11:25:04
+lastsearch = 2024-08-01 11:54:48
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,14 +12,14 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = 0.0%%
+title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
 
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOopbsu7tkYwub_Nx8ADolKBJuehn6oKYOs8RQIFjT7W600-F6y21
 
 [tiki.vn]
 match = 11.1%%
@@ -164,7 +164,7 @@ url = https://stockbiz.vn/tin-tuc/ha-noi-huong-toi-xuat-khau-thuy-san/26441575
 [metric.vn]
 match = -48.1%%
 title = Báo cáo thị trường Chăn lông tuyết 5kg dành cho doanh ...
-url = https://metric.vn/chan-long-tuyet-5kg
+url = https://metric.vn/chan-long-tuyet-5kg?srsltid=AfmBOoqnM-TBaD4uX6v-fIpY1u-WYXTwoUwmubsxs8QnEqSZxFDAZqWM
 
 [ts.udn.vn]
 match = -10.0%%
