--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-01 10:16:12
+lastsearch = 2024-08-01 11:53:22
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoqC1YY0UYV4tcdRU6CNVU6H2Sw9KSvxxbSSjUPhUHcZ22ssdyFm
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOopnmEzBGgcSPh9ivetr5CL4u90XIqiGGyxXFkWxj-XZfaSYSU2G
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
 match = -69.6%%
@@ -29,7 +29,7 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOopeAfDrJya6vvSVeZXmK25OBBv9ky6-nRt_HNAi5LLQTAAHLvGK
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [chieutrucsaigon.com]
 match = -17.4%%
