--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-08-01 10:46:38
+lastsearch = 2024-08-01 11:58:45
 
 [sieuthidemonline.vn]
-match = -19.0%%
-title = Nệm lò xo Techwood cao cấp giá rẻ tại Hà Nội
-url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/attachment/dem-lo-xo-techwood/
+match = -66.7%%
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -24,12 +24,12 @@ url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 [demxanh.com]
 match = -95.2%%
 title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html
+url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html?srsltid=AfmBOoq0aE83d1d3Rs22L6095Y3nXGmB0Lu495fAuaam6VVG8_S-F2bM
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOooOHDEJn6uFmS9ehje1mJQ1Cl3em_ww69TNOnErdW5LuWZMfohd
 
 [shopee.vn]
 match = -61.9%%
@@ -57,9 +57,9 @@ title = ĐỆM LÒ XO TECHWOOD 1M6 X 2M SALE OFF 40%%
 url = https://www.demgiare.net/dem-lo-xo-techwood-1m6-x-2m.html
 
 [changagoidemsonghong.online]
-match = -81.0%%
-title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
-url = https://changagoidemsonghong.online/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
+match = -61.9%%
+title = Đại lý bán Đệm lò xo Tuấn Anh tại Quận Cầu Giấy
+url = https://changagoidemsonghong.online/dai-ly-ban-dem-lo-xo-tuan-anh-tai-quan-cau-giay.html
 
 [medium.com]
 match = -33.3%%
