CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-01 11:22:42
+lastsearch = 2024-08-01 12:32:18
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = 0.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = 4.0%%
+title = Phim Mai Có Chiếu Ở Taiwan Không
+url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
 
 [shopee.vn]
 match = -28.0%%
@@ -27,19 +27,19 @@ title = sitemap-article-2022-10-12.xml
 url = https://congly.vn/sitemap-article-2022-10-12.xml
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -60.0%%
+title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
+url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
 
 [vi.wikipedia.org]
-match = 6.7%%
-title = Địa lý Đài Loan
-url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -72.0%%
-title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
-url = https://www.roc-taiwan.org/vnsgn_vi/index.html
+match = -44.0%%
+title = Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt Nam
+url = https://www.roc-taiwan.org/vn_vi/index.html
 
 [books.google.com]
 match = -80.0%%
@@ -47,14 +47,14 @@ title = Những Bài Văn Lớp 12 Hay Thi (Tập 1) - Google Books Result
 url = https://books.google.com/books?id=zeMGEQAAQBAJ&pg=PT159&lpg=PT159&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=5HmGBtZ4rB&sig=ACfU3U1nyF1d0hh21YxymhkelVRDbz_moQ&hl=en&sa=X&ved=2ahUKEwjh6eGJ1dCHAxUuEFkFHScCCUUQ6AF6BAgXEAM
 
 [www.skyscanner.com.vn]
-match = -48.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
-url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
+match = -60.0%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOorzgSeRRQjpUlDkaXGmt91AqTPgN8jcN1BAvTW91-HzOUp5jVqI
 
 [www.traveloka.com]
 match = -96.0%%
