--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:58:19
 lastsearch = 2024-08-01 12:29:51
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -82,9 +82,9 @@ title = Fan Bingbing 范冰冰 (@bingbing_fan)
 url = https://www.instagram.com/bingbing_fan/?hl=en
 
 [en.wikipedia.org]
-match = -66.7%%
-title = Anggun
-url = https://en.wikipedia.org/wiki/Anggun
+match = 27.3%%
+title = Kim Tu-bong
+url = https://en.wikipedia.org/wiki/Kim_Tu-bong
 
 [mail.storyfb.com]
 match = 35.7%%
