--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOorlfEhsvYwROuAFxMrAB4SBVIjISba5NbEKJ65l2_GgWhVs9xZY
 
 [chuyenhangviet.com]
 match = -43.5%%
