--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-01 11:47:42
+lastsearch = 2024-08-01 12:42:24
 
 [scholar.google.com]
 match = -43.8%%
@@ -32,9 +32,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -143.8%%
+title = Rạp CGV IPH Hà Nội - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cgv-iph-ha-noi/
 
 [nhandan.vn]
 match = -62.5%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 1/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -206.2%%
-title = Xác minh clip người đàn ông chở em bé đi ngược chiều tại ...
-url = https://www.youtube.com/watch?v=Y5TpIOtmAyg
+match = -243.8%%
+title = Ngôi làng toàn “người khổng lồ” ở Việt Nam cực ít người biết ...
+url = https://www.youtube.com/watch?v=6u1GU8_6GQI
 
 [books.google.com]
 match = -156.2%%
