--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-01 11:32:46
+lastsearch = 2024-08-01 12:36:46
 
 [shopee.vn]
 match = -65.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -8.7%%
-title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
-url = https://www.sendo.vn/chieu-nhua.htm
+match = 34.8%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOoomWD3qWRK-8ICydzGjrVY76YBKCRrQnOjIjHMsLuFuv6Irrll9
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
 match = -82.6%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOooQXw_E-9lwgFhvIhFkuJd5hi5-gl0hfQeCaomlZslQrrdYzbOr
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [h5.lazada.vn]
 match = 34.8%%
