--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-01 09:51:49
+lastsearch = 2024-08-01 12:31:35
 
 [burningman.org]
 match = 0.0%%
@@ -327,8 +327,8 @@ title = Twin Peaks Restaurants: Scratch American Food, Draft Beer ...
 url = https://twinpeaksrestaurant.com/
 
 [www.adidas.com]
-match = -93.3%%
-title = adidas Official Website | adidas US
+match = -73.3%%
+title = Sneakers & Sportswear | adidas US
 url = https://www.adidas.com/us
 
 [www.seikowatches.com]
@@ -523,8 +523,8 @@ url = https://www.mentimeter.com/
 
 [www.microsoft.com]
 match = -140.0%%
-title = Microsoft – Cloud, Computers, Apps & Gaming
-url = https://www.microsoft.com/
+title = Personal Cloud Storage – Microsoft OneDrive
+url = https://www.microsoft.com/en-us/microsoft-365/onedrive/online-cloud-storage
 
 [checkhimout.ca]
 match = -66.7%%
