--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-01 08:02:47
+lastsearch = 2024-08-01 12:30:31
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -105.0%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = -145.0%%
