--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -73.7%%
-title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
+match = -94.7%%
+title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
