--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-01 06:44:26
+lastsearch = 2024-08-01 12:47:31
 
 [tuananh.vn]
 match = 22.2%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOorSWOex4WvjomDtCCeC8FlmcYp-9sctGOmAtNC1kL_FrnGfY2ww
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 [www.youtube.com]
 match = -16.7%%
 title = Đệm Tuấn Anh
-url = https://www.youtube.com/@emtuananh5547/videos
+url = https://www.youtube.com/channel/UC1lyuex0oy3RBLBffNrjtMw/videos
 
 [sieuthinem.com]
 match = 32.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOooQZ8D3QMeV0pwMRv6fNAG5l43Aw2_uSkNjc2JYFHEDjN0RCV0W
 
 [m.facebook.com]
 match = -76.0%%
