--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-01 11:40:41
+lastsearch = 2024-08-01 12:48:25
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,12 +14,12 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -21.7%%
 title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOoqIHJ2hzGZC2AqdozcAIMT_PwzT_WOsw0KX5PuLUEp4c6_jlO3F
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
+match = 43.5%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [shopee.vn]
 match = 17.4%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.158
 [www.lazada.vn]
 match = 21.7%%
 title = Chiếu cao bằng Việt Nam 1.2 X 1.95
-url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2&srsltid=AfmBOorbW7RMIjLPOLCZCZZDskx99mQC_VMWHI9M79qHx9OEFcJLiVs2
+url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2
 
 [chieu.com.vn]
 match = -4.3%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOopunlbttJxnIQVAjW1MKOIT3m7FppRPskmN7ew2-_qKDlnAo42e
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
