--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -116.0%%
-title = Địa chí Bắc Giang: địa lý và kinh tế - Page 406 - Google Books Result
-url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA406&lpg=PA406&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KD-w9X0tF&sig=ACfU3U2q0XKWziJ14JEZm1Qx0Pc78hSbPA&hl=en&sa=X&ved=2ahUKEwj9so_4sdGHAxUgCTQIHdEiDZ0Q6AF6BAgYEAM
+match = -132.0%%
+title = Tuttle English-Vietnamese Dictionary - Page 226 - Google Books Result
+url = https://books.google.com/books?id=57aHCgAAQBAJ&pg=PA226&lpg=PA226&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=j2w2T2y_ph&sig=ACfU3U1XBz6aFunx_CHmik7JzKuvYgrTmg&hl=en&sa=X&ved=2ahUKEwjM7ufXjNOHAxXPlYkEHVCDBfUQ6AF6BAgXEAM
 
 [cellphones.com.vn]
 match = -52.0%%
