--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-01 10:16:55
+lastsearch = 2024-08-01 13:00:28
 
 [www.bible.com]
 match = -88.2%%
@@ -12,14 +12,14 @@ title = LUKA 22 | MIZCLBSI Bible | YouVersion
 url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -182.4%%
-title = Luke 20-22 NIV - The Authority of Jesus Questioned - One
-url = https://www.biblegateway.com/passage/?search=Luke 20-22&version=NIV
+match = -82.4%%
+title = John 20:22 New International Version
+url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -64,7 +64,7 @@ url = https://www.biblestudytools.com/commentaries/gills-exposition-of-the-bible
 [www2.census.gov]
 match = -129.4%%
 title = 1930 Census: Alphabetical index of occupations
-url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha.pdf
+url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha-06.pdf
 
 [www.tiktok.com]
 match = -158.8%%
