--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-01 00:20:01
+lastsearch = 2024-08-01 12:53:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -705,4 +705,9 @@ url = https://www.adb.org/business/how-to/what-does-it-mean-be-debarred-adb
 match = -40.9%%
 title = Case 14-22654-GMB Doc 19 Filed 06/ ...
 url = https://pbnlaw.com/media/404967/REVEL-19.pdf
+
+[www.usni.org]
+match = 0.0%%
+title = 
+url = https://www.usni.org/magazines/proceedings/1973/may/marine-corps-operations-vietnam-1969-1972
 
