CI images update

--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-08-01 10:50:28
+lastsearch = 2024-08-01 13:42:16
 
 [demxanh.com]
 match = -14.8%%
@@ -147,9 +147,9 @@ title = Chiếu điều hòa kèm gối | Chăn, chiếu, màn, ga
 url = https://ababy.com.vn/chieu-dieu-hoa-kem-goi-p1289.html
 
 [www.youtube.com]
-match = -44.4%%
-title = HÀNG GIẢM GIÁ - Chiếu điều hòa nhật 2 mặt - nằm êm ngủ ...
-url = https://www.youtube.com/watch?v=fhwNXjU32Ww
+match = -55.6%%
+title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
+url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [dienmaycholon.com]
 match = -29.6%%
