--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-01 06:37:22
+lastsearch = 2024-08-01 13:46:40
 
 [shopee.vn]
 match = -162.5%%
@@ -77,8 +77,8 @@ title = Xe tăng mai rùa Nga xâm nhập phòng tuyến Ukraine
 url = https://vnexpress.net/xe-tang-mai-rua-nga-xam-nhap-phong-tuyen-ukraine-4736187.html
 
 [www.tiktok.com]
-match = -212.5%%
-title = Gối mai rùa bông khổng lồ, gối rùa khổng lồ, chăn con rùa, ...
+match = -231.2%%
+title = Gối mai rùa bông khổng lồ, gối rùa khổng lồ, chăn con rùa, đồ ...
 url = https://www.tiktok.com/@dozotri.cute/video/7309407898495520007
 
 [thanhnien.vn]
@@ -172,9 +172,9 @@ title = Giáo Xứ Đức Mẹ Việt Nam
 url = http://www.giaoxuducmevietnam.org/
 
 [mnhsen-nt.khanhhoa.edu.vn]
-match = -43.8%%
-title = 2015. đề tài: chú rùa đáng yêu
-url = https://mnhsen-nt.khanhhoa.edu.vn/tabid/65/id/576/language/vi-VN/Default.aspx
+match = -143.8%%
+title = Đồ dùng của trẻ - - Con rùa còn thiếu các bộ phận
+url = https://mnhsen-nt.khanhhoa.edu.vn/tabid/65/id/951/language/vi-VN/Default.aspx
 
 [trungchinhaudio.vn]
 match = -81.2%%
