--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-01 10:22:07
+lastsearch = 2024-08-01 13:46:21
 
 [vnexpress.net]
 match = -128.6%%
@@ -12,9 +12,9 @@ title = Du lịch BÀ RỊA VŨNG TÀU 2024: top 18 địa điểm phải trải
 url = https://vnexpress.net/cam-nang-du-lich-ba-ria-vung-tau-4479713.html
 
 [vielimousine.com]
-match = -100.0%%
-title = Kinh Nghiệm Tham Quan Và Khám Phá Ngọn Hải Đăng ...
-url = https://vielimousine.com/tin-tuc/ngon-hai-dang-vung-tau.html
+match = -23.8%%
+title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
+url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
 match = -114.3%%
@@ -347,9 +347,9 @@ title = Khu du lịch cáp treo - Hồ Mây Vũng Tàu.
 url = http://tpvt.vungtau.baria-vungtau.gov.vn/web/guest/du-lich-vung-tau/-/brvt/extAssetPublisher/content/333393/khu-du-lich-cap-treo-ho-may-vung-tau
 
 [www.klook.com]
-match = -61.9%%
-title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
-url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
+match = -85.7%%
+title = Vũng Tàu Có Gì Chơi? Cẩm Nang Du Lịch Vũng Tàu Trọn Bộ
+url = https://www.klook.com/vi/blog/vung-tau-co-gi-choi/
 
 [www.traveloka.com]
 match = -114.3%%
