--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-01 04:48:31
+lastsearch = 2024-08-01 13:39:50
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -147.6%%
-title = Lippincott's Gazetteer of the World: A Complete Pronouncing ...
-url = https://books.google.com/books?id=R9zPRFeo8ZMC&pg=PA1450&lpg=PA1450&dq=nem+di+a+mon+9f+16+re&source=bl&ots=3eFIyAI61H&sig=ACfU3U3iHdZBSQKPafV03yKie7lGWdN-2g&hl=en&sa=X&ved=2ahUKEwil2LbviNKHAxXgN2IAHSfBJAoQ6AF6BAgbEAM
+match = -38.1%%
+title = A Dictionary of Music and Musicians
+url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EiPL-x8&sig=ACfU3U0NPxeuM8JSnConmS7AS9_KJ6kAMQ&hl=en&sa=X&ved=2ahUKEwi6qYXSl9OHAxUlFVkFHeTRC-kQ6AF6BAgYEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -104.8%%
-title = Rich offer of conferences and networking from the ...
-url = https://www.formatbiz.it/dettNews.aspx?id=10605
+match = -100.0%%
+title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
+url = https://www.formatbiz.it/dettNews.aspx?id=9944
 
 [yro.slashdot.org]
 match = -114.3%%
