--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-01 10:34:58
+lastsearch = 2024-08-01 13:38:27
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoqjqOW6ncyAMoXV-d-WnTXJ1txZfvymC63F4RULhM8RllUWPL3m
 
 [tiki.vn]
 match = -36.4%%
@@ -17,9 +17,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -36.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/?srsltid=AfmBOorp2cjZDYwE2rgw2rRveSmoXitq5bwMISGBz_4g9wPhGibUSmOS
 
 [flexhouse.vn]
 match = -104.5%%
@@ -32,9 +32,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [shopee.vn]
 match = -50.0%%
@@ -49,7 +49,7 @@ url = https://blanc.vn/tham-trai-san
 [demxanh.com]
 match = -27.3%%
 title = Giường sắt giả đèn hoa văn - Hà Nội
-url = https://demxanh.com/giuong-sat-gia-den-hoa-van.html
+url = https://demxanh.com/giuong-sat-gia-den-hoa-van.html?srsltid=AfmBOop9EGryoycZU3HDwTnqBftiondhO1ZWNJMp3ysQMr1IfPE14Jtb
 
 [www.kymdan.com]
 match = 4.5%%
