--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-01 09:31:47
+lastsearch = 2024-08-01 13:50:50
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -287,8 +287,8 @@ title = TUI
 url = https://hk.linkedin.com/company/tuigroup?trk=public_profile_experience-item_profile-section-card_image-click
 
 [tui-magic-life-adults-only-16.aegeanhotelspage.com]
-match = -291.7%%
-title = Tui Magic Life Bodrum - Adults Only (16+) - Aegean Region
+match = -308.3%%
+title = Resort Tui Magic Life Bodrum - Adults Only (16+) Bodrum ...
 url = https://tui-magic-life-adults-only-16.aegeanhotelspage.com/en/
 
 [www.airliners.net]
@@ -497,7 +497,7 @@ title = Miss Cosmo added a new photo — at Thung Nham...
 url = https://m.facebook.com/100070582791098/photos/528788106150611/
 
 [www.seascanner.com]
-match = 8.3%%
-title = TUI Cruise Deals
+match = -25.0%%
+title = TUI Cruises 2022-2023
 url = https://www.seascanner.com/tui-cruises
 
