CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-01 12:44:38
+lastsearch = 2024-08-01 13:53:14
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -140.0%%
-title = WazirX Hacker Converts Majority of Stolen Assets into Ether
-url = https://cryptonews.com/news/wazirx-hacker-converts-majority-of-stolen-assets-into-ether.htm
+match = -120.0%%
+title = South Korean Exchanges to Pay 300M Won Supervisory Fee
+url = https://cryptonews.com/news/south-korean-exchanges-to-pay-300m-won-supervisory-fee.htm
 
 [www.thespike.gg]
 match = -75.0%%
