--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-01 12:45:29
+lastsearch = 2024-08-01 13:56:17
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -108,8 +108,8 @@ url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-tho
 
 [www.facebook.com]
 match = -25.0%%
-title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
-url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
+title = Trust+ - HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG ...
+url = https://www.facebook.com/Trustplus1304/posts/hành-trình-peel-da-14-ngày-bằng-mandelic-acid-chỉ-180k-của-mình-thật-ra-hôm-nay-/1992134787558676/
 
 [trongdoitam1.mysapo.net]
 match = 14.3%%
@@ -152,9 +152,9 @@ title = VAN 1 CHIỀU XANH ĐÀI LOAN
 url = http://www.tapdoandaiviet.net/van-1-chieu-xanh-dai-loan
 
 [lynhstore.net]
-match = 8.3%%
-title = Cửa hàng - LynhStore.net
-url = https://lynhstore.net/cua-hang/page/6/
+match = -53.6%%
+title = Viên uống tiền mãn kinh Kobayashi Inochi no Haha Nhật Bản
+url = https://lynhstore.net/san-pham/vien-uong-tien-man-kinh-kobayashi-inochi-no-haha-nhat-ban/
 
 [www.beemart.vn]
 match = 14.3%%
@@ -217,9 +217,9 @@ title = chiếu đài loan đại giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu đài loan đại
 
 [tiki.vn]
-match = 3.6%%
-title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu trúc đài loan
+match = -25.0%%
+title = YY682 hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q= YY682
 
 [nongnghiepvang.com]
 match = -42.9%%
