--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-01 11:58:01
+lastsearch = 2024-08-01 13:50:28
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -147.4%%
+title = Kỹ thuật trồng mộc hương - loài cây siêu "đắt đỏ " | VTC16
+url = https://www.youtube.com/watch?v=q48GH4XH8uY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
