--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-01 06:44:13
+lastsearch = 2024-08-01 13:59:19
 
 [www.youtube.com]
 match = -72.7%%
@@ -47,9 +47,9 @@ title = Tôn Giáo Học So Sánh - Page ii - Google Books Result
 url = https://books.google.com/books?id=FMfKEAAAQBAJ&pg=PR2-IA16&lpg=PR2-IA16&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=NSu-Jc7mak&sig=ACfU3U3UBII2N47UQpJNG_msE-W1KjyY-w&hl=en&sa=X&ved=2ahUKEwiBysDO5s2HAxXFIkQIHU8aAwQQ6AF6BAgWEAM
 
 [www.skyscanner.com.vn]
-match = -60.0%%
-title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
+match = -48.0%%
+title = Vé máy bay giá rẻ từ Vương quốc Anh đến Đài Loan
+url = https://www.skyscanner.com.vn/routes/uk/tw/vuong-quoc-anh-to-đai-loan.html
 
 [tienphong.vn]
 match = -36.0%%
@@ -107,9 +107,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = 12.5%%
-title = Lịch sử Đài Loan
-url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.nguoi-viet.com]
 match = 4.0%%
