--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-01 12:46:03
+lastsearch = 2024-08-01 13:54:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Nhịp đập Thị trường 01/08: Lực bán lấn át, VN-Index về ...
-url = https://vietstock.vn/2024/08/nhip-dap-thi-truong-0108-luc-ban-lan-at-vn-index-ve-duoi-tham-chieu-1636-1215301.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 01/08: Tâm lý thận trọng dần ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0108-tam-ly-than-trong-dan-xuat-hien-585-1215411.htm
 
 [baohungyen.vn]
 match = -200.0%%
