--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-01 12:29:51
+lastsearch = 2024-08-01 13:55:16
 
 [www.bible.com]
-match = -135.7%%
-title = JOHANA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
+match = -157.1%%
+title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
+url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
 
 [tiki.vn]
 match = -171.4%%
