--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-01 11:38:38
+lastsearch = 2024-08-01 13:49:24
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2412015064.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
 match = -77.8%%
 title = NEM Fashion - NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
+url = https://www.facebook.com/100064581196454/photos/900570882105610/
 
 [thegioinem.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -155.6%%
-title = Nem nướng Ninh Hoà Dì Út #AnCungTikTok #couplecomedy ...
-url = https://www.tiktok.com/@khalinh.ne/video/7357680006492851474
+match = -172.2%%
+title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
+url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
 
 [www.diepxuan.com]
 match = 11.1%%
