--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-01 12:58:27
+lastsearch = 2024-08-01 13:47:25
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -232,9 +232,9 @@ title = North Korea Accused in Crypto Heists
 url = https://www.wsj.com/public/resources/documents/JYVdPdlTZi6kjI8hcHTJ-WSJNewsPaper-2-18-2021.pdf
 
 [toyo-bunko.repo.nii.ac.jp]
-match = -133.3%%
-title = P-IV-a-55
-url = https://toyo-bunko.repo.nii.ac.jp/record/7170/files/Catalogue of Pamphlets 32.pdf
+match = -144.4%%
+title = DIALECTS.
+url = https://toyo-bunko.repo.nii.ac.jp/record/3432/files/memoirs12_01.pdf
 
 [www.understandingwar.org]
 match = -82.6%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
