--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-06 16:51:51
 lastsearch = 2024-08-01 13:43:38
 
 [thamaulac.com.vn]
-match = -88.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -22.2%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
 url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
 
 [thamsami.com]
-match = -94.4%%
-title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
-url = http://thamsami.com/san-pham/314/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam.html
+match = -55.6%%
+title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
+url = http://thamsami.com/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam
 
 [thamht.vn]
 match = 27.8%%
@@ -57,9 +57,9 @@ title = Thảm xốp trơn đơn màu 60x60
 url = https://thamht.vn/products/tham-lot-tre-nam-choi
 
 [tiki.vn]
-match = -111.1%%
-title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
+match = -127.8%%
+title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 60cm x ...
+url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-60cm-x-60cm-x-0-6cm-tam-mau-xam-p74677292.html
 
 [thamtretho.com]
 match = -66.7%%
@@ -80,4 +80,9 @@ url = https://www.facebook.com/xoptraisan/
 match = -144.4%%
 title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
+
+[www.sendo.vn]
+match = -133.3%%
+title = 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
+url = https://www.sendo.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-0-6cmtam-mau-xam-sang-nhu-hinh-38742680.html
 
