--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-01 11:36:14
+lastsearch = 2024-08-01 13:52:55
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -22,8 +22,8 @@ title = Live TUI Airways Flight Status
 url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
-match = -160.0%%
-title = Singapore Cruise Ship Schedule 15 February 2024
+match = -200.0%%
+title = Singapore Cruise Ship Schedule 15 February 2024 | ...
 url = https://www.cruisetimetables.com/singaporeschedule-15feb2024.html
 
 [www.partstown.com]
