CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-01 13:51:09
+lastsearch = 2024-08-01 14:38:29
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -175.0%%
-title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
-url = https://www.youtube.com/watch?v=_iGnRB4o7ng
+match = -168.8%%
+title = Sài Gòn ĐÊM VẮNG LIÊU XIÊU CẢNH CHỢ 100 NĂM | CHỢ ...
+url = https://www.youtube.com/watch?v=83-kQ4QO4h0
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -131.2%%
-title = LỄ BỐC THĂM CHIA CẶP VÒNG TUYỂN CHỌN AIMAG ...
-url = https://m.facebook.com/caothuLQM/photos/-1800-hôm-nay-lễ-bốc-thăm-chia-cặp-vòng-tuyển-chọn-aimag-2021-bộ-môn-liên-quân-m/1022314476231200/
+match = -200.0%%
+title = Anh Em United - Để mà hỏi Chido Obi Martin đá như nào ...
+url = https://m.facebook.com/story.php/?story_fbid=461723650074946&id=100087119453381
 
 [baomoi.com]
 match = -193.8%%
@@ -502,9 +502,9 @@ title = Phan Thanh Nhàn (@ptn.18) • Instagram photos and videos
 url = https://www.instagram.com/ptn.18/
 
 [congan.com.vn]
-match = -218.8%%
-title = Va chạm với xe tải rồi ngã lọt gầm container, một người tử ...
-url = https://congan.com.vn/giao-thong-24h/va-cham-xe-tai-roi-nga-lot-gam-container-mot-nguoi-tu-vong_165243.html
+match = -175.0%%
+title = Hai xe máy va quẹt, một người ngã ra đường bị xe ...
+url = https://congan.com.vn/giao-thong-24h/hai-xe-may-va-quet-mot-nguoi-nga-lot-gam-xe-container-bi-can-tu-vong_165426.html
 
 [2sao.vn]
 match = -106.2%%
@@ -622,9 +622,9 @@ title = Cung thủ Lê Quốc Phong xếp hạng 47 vòng ...
 url = https://baochinhphu.vn/cung-thu-le-quoc-phong-xep-hang-47-vong-xep-hang-mon-ban-cung-tai-olympic-102240725235458908.htm
 
 [giaoducthoidai.vn]
-match = -200.0%%
-title = Báo Thái Lan sốc trước tin CLB V-League muốn chiêu mộ ...
-url = https://giaoducthoidai.vn/bao-thai-lan-soc-truoc-tin-clb-v-league-muon-chieu-mo-luka-modric-post693330.html
+match = -143.8%%
+title = Hậu vệ Việt kiều nhận lót tay 'khủng' ở V-League
+url = https://giaoducthoidai.vn/hau-ve-viet-kieu-nhan-lot-tay-khung-o-v-league-post694028.html
 
 [cefd.edu.vn]
 match = -125.0%%
@@ -647,9 +647,9 @@ title = Ma túy và những phận đời ở lại
 url = https://yenbaitv.org.vn/ma-tuy-va-nhung-phan-doi-o-lai-100940.media
 
 [dantri.com.vn]
-match = -162.5%%
-title = NSND Xuân Bắc, Việt Hoa diễn kịch tưởng nhớ Lưu ...
-url = https://dantri.com.vn/giai-tri/nsnd-xuan-bac-viet-hoa-dien-kich-tuong-nho-luu-quang-vu-20240730115201368.htm
+match = -125.0%%
+title = Lê Cát Trọng Lý nói về văn hóa gây tranh cãi
+url = https://dantri.com.vn/giai-tri/le-cat-trong-ly-noi-ve-van-hoa-gay-tranh-cai-nguoi-tre-can-ung-xu-the-nao-20240731000555274.htm
 
 [thanhnien.vn]
 match = -200.0%%
