--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 09:24:47
+lastsearch = 2024-08-01 14:30:34
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmOMlqc&sig=ACfU3U2nv3qYTyXhOYY-WPL6qytpAgFY6g&hl=en&sa=X&ved=2ahUKEwiamvvQ3tKHAxW1rokEHVW9A4sQ6AF6BAgZEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmQKpl9&sig=ACfU3U1E5BuMcS2JWdt65AqkvLQDzD6ezg&hl=en&sa=X&ved=2ahUKEwjQjMj9otOHAxXmEkQIHZtSIlsQ6AF6BAgjEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
