--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-08-01 04:27:36
+lastsearch = 2024-08-01 14:32:57
 
 [www.everonvn.vn]
-match = 22.0%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 29.6%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonvn.com.vn]
-match = 31.7%%
-title = Đệm Lò Xo Everon, King Koil 【 Giảm 20%% 】HàngChính Hãng
+match = 34.1%%
+title = Đệm Lò Xo Everon, King Koil 【 🥇Giảm 20%% 】HàngChính ...
 url = https://everonvn.com.vn/23/dem-lo-xo-everon
 
 [everonkorea.com]
