--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-01 12:51:33
+lastsearch = 2024-08-01 14:29:10
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạn
 [demxanh.com]
 match = -25.0%%
 title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOopVNEOiRxNLCE52IZhFKj5P6TnVNe8alllvXb7Shl0jwQwk5Ln3
+url = https://demxanh.com/chan-ga-goi-dem.html
 
 [changagoibenlinda.com]
 match = -12.5%%
@@ -175,4 +175,9 @@ url = https://mym.com.vn/bo-drap-goi-cotton-mau-16
 match = 25.0%%
 title = Bộ Chăn Ga Gối Koala WF 16 (200*220cm)
 url = https://koala.vn/bo-chan-ga-goi-koala-wf-16.html
+
+[khodem.vn]
+match = 8.3%%
+title = Bộ chăn ga gối Sông Hồng Classic mã C16C38
+url = https://khodem.vn/bo-chan-ga-goi-song-hong-classic-ma-c15c29-sao-chep/
 
