--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-01 13:53:35
+lastsearch = 2024-08-01 14:35:43
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -12,9 +12,9 @@ title = Bộ ga chun LIVING - LV18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18?srsltid=AfmBOoqHblLmSsYOOUekrxDfgNvkjQDCx6-UV8d3m4P2_hyZOSbFc_7P
 
 [shopee.vn]
 match = -114.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc018
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorQfmCkl0L4nz7DrtDj49SpzNDGSnr6NYpkHBfEAqZRVBH8k14O
 
 [hoangkimhome.com]
 match = -90.5%%
