--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-01 12:54:58
+lastsearch = 2024-08-01 14:38:48
 
 [demxanh.com]
 match = 43.5%%
 title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html?srsltid=AfmBOorBK8tzxXz_9FrHAQUEpDsac2BFFK4NKydUwKV4BDb5tl1p87jA
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOoriuGEWtK1XXto5hB42vCTdBfzf_vNT1wYkI5HH67zszWzSx9UU
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [www.dienmayxanh.com]
 match = -36.7%%
