--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-01 06:25:59
+lastsearch = 2024-08-01 14:36:04
 
 [shopee.vn]
 match = 25.0%%
@@ -305,4 +305,14 @@ url = https://baotintuc.vn/thoi-su/le-quoc-tang-tong-bi-thu-nguyen-phu-trong-bie
 match = -131.2%%
 title = Hồng lâu mộng phiên bản mới gặp trở ngại nào?
 url = https://vtv.vn/van-hoa-giai-tri/hong-lau-mong-phien-ban-moi-gap-tro-ngai-nao-20240727174901232.htm
+
+[thanhtravietnam.vn]
+match = -200.0%%
+title = Khởi động các hoạt động kỷ niệm 60 năm thành lập Bảo Việt
+url = https://thanhtravietnam.vn/xa-hoi/khoi-dong-cac-hoat-dong-ky-niem-60-nam-thanh-lap-bao-viet-209474.html
+
+[thanglong.chinhphu.vn]
+match = -75.0%%
+title = Mực nước giảm, Hà Nội rút Báo động lũ
+url = https://thanglong.chinhphu.vn/muc-nuoc-giam-ha-noi-rut-bao-dong-lu-10324080111083841.htm
 
