--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-01 11:23:44
+lastsearch = 2024-08-01 14:37:49
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqsYPdeBGDYnelHJnKbh1hFLFwgM7jRPLfBidFIVwRfNsNIkCQH
 
 [vongxepsaigon.vn]
 match = -76.2%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = 42.9%%
-title = Chiếu trúc size 1,4m; 1,6m
-url = https://shopee.vn/Chiếu-trúc-size-1-4m-1-6m-1-8m-chiếu-trúc-giải-nhiệt-mùa-hè-i.15000357.4003983431
+match = 47.6%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.lazada.vn]
 match = -66.7%%
