--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-01 12:28:06
+lastsearch = 2024-08-01 14:34:19
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
 match = -190.9%%
@@ -37,9 +37,9 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -263.6%%
-title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường/1m2
+match = -90.9%%
+title = Giường ngủ với ba mẹ 1m3 loại 1
+url = https://shopee.vn/Giường-ngủ-với-ba-mẹ-1m3-loại-1-i.13765237.409647830
 
 [dogodelathanhhanoi.com]
 match = -245.5%%
