--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-01 09:50:09
+lastsearch = 2024-08-01 14:25:25
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -12,14 +12,14 @@ title = Đệm PYEODA
 url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
-match = -70.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
+match = -80.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
 
 [demxanh.com]
 match = -100.0%%
 title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html?srsltid=AfmBOoq7rtte055y2vOUg5eJB4BiIjwvNNFv2kB3NhXslEGp4Rl_DiMG
 
 [www.facebook.com]
 match = -75.0%%
@@ -107,9 +107,9 @@ title = ETO AND SIKAT sa DEKADA 80 at 90 | Easy-To-Follow ...
 url = https://m.youtube.com/watch?v=Tpt6d2OgyxI&embeds_referring_euri=https://seagateventures.com/&feature=emb_imp_woyt
 
 [www.youtube.com]
-match = -100.0%%
-title = CÔNG TY THHH TM & XNK NGỌC DŨNG VÀ CHĂN GA GỐI ...
-url = https://www.youtube.com/watch?v=5lxH9CQsyc8
+match = -115.0%%
+title = Cận cảnh| Chăn ga gối Singapore Pyeoda Luxury 5 món ...
+url = https://www.youtube.com/watch?v=9Yf1j0Ru3dU
 
 [www.otofun.net]
 match = -165.0%%
